# circuit-irt

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
circuit_irt/: datastore.py  families.py  generators.py  harness.py  memorization_probes.py  metadata.py  models.py  netlist_dsl.py  paths.py  reference.py  respondent.py  run_inference.py
configs/: data.yaml  models.yaml
docker/: Dockerfile.gpu
docs/: families.md  prior_work_notes.md  spec_glossary.md
examples/: rc_lowpass_demo.py
scripts/: setup_runpod.sh
tests/: test_audit.py  test_classifier.py  test_inference.py  test_spec_recipes.py
